Setting Up Bitrise,
New Icons

--- a/Scratch.xcodeproj/xcshareddata/xcschemes/Scratch.xcscheme
+++ b/Scratch.xcodeproj/xcshareddata/xcschemes/Scratch.xcscheme
@@ -86,6 +86,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Scratch"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
